The engine is finalized and some tests of batch rendering are ready. It is now possible to utilize the engine for personal projects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,8 +15,18 @@ add_executable(game
     src/VertexBuffer.cpp   
     src/VertexArray.cpp
     src/Shader.cpp
-    src/include/stb_image/stb_image.cpp
     src/Texture.cpp
+    src/tests/TestClearColor.cpp
+    src/tests/TestTexture2D.cpp
+    src/tests/TestBatchRendering2D.cpp
+    src/tests/TestBatchColor.cpp
+    src/tests/TestBatchTexture.cpp
+    src/tests/Test.cpp
+    src/include/stb_image/stb_image.cpp
+    src/include/imgui/imgui_impl_glfw_gl3.cpp
+    src/include/imgui/imgui_demo.cpp
+    src/include/imgui/imgui_draw.cpp
+    src/include/imgui/imgui.cpp
 )
 
 target_link_libraries(game PRIVATE glfw GLEW OpenGL::GL)
